Fix Docker + Start

--- a/.env
+++ b/.env
@@ -1,7 +1,15 @@
 # Minecraft Server Config
 
 OPENJDK_VERSION=17
-MINECRAFT_SERVER_RUN_COMMAND="java -Xmx10G -Xms10G -jar /java/arclight-forge-1.19.4-1.0.7.jar nogui"
+MINECRAFT_SERVER_RUN_COMMAND="java -Xmx4G -Xms4G -jar ../java/arclight-forge-1.18.2-1.0.11.jar nogui"
+
+JAR_SERVER_FILE="arclight-forge-1.19.4-1.0.7.jar"
+
+RAM_MAX="-Xmx4G"
+RAM_MIN="-Xms4G"
+
+DEDICATED_RAM="4G"
+
 
 # Web Server Port
 
