--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,11 @@ services:
     volumes:
       - ./web:/var/www/html
       - ./config/php.ini:/usr/local/etc/php/php.ini
+      - ./minecraft-data:/var/www/html/minecraft-data/
+      - './config/apache/apache2.conf:/etc/apache2/apache2.conf'
+      - './config/apache/certs/:/etc/apache2/certs/'
+      - './config/apache/ports.conf:/etc/apache2/ports.conf'
+      - './config/apache/sites-available/:/etc/apache2/sites-available/'
+      - './config/apache/mods-available/:/etc/apache2/mods-available/'
     working_dir: /var/www/html
     
