--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "${WEB_PORT}:80"
+    user: "root"
     environment:
       XDEBUG_CONFIG: remote_host=host.docker.internal remote_port=9003 remote_enable=1
     volumes:
@@ -36,4 +37,5 @@ services:
       - './config/apache/sites-available/:/etc/apache2/sites-available/'
       - './config/apache/mods-available/:/etc/apache2/mods-available/'
     working_dir: /var/www/html
+    tty: true
     
